--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -13,21 +13,18 @@
     <div class="max-w-sm">
         <h2 class="header text-4xl" th:text="#{admin_panel}"/>
         <div class="btn-group">
-            <a th:href="@{{context_path}/{locale}/admin/create-account(
-        locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},
-        context_path=${#httpServletRequest.getContextPath()})}"
+            <a th:href="@{/{locale}/admin/create-account(
+        locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()})}"
                class="w-1/3">
                 <button type="button" class="btn-primary min-w-fit w-full" th:text="#{create_user}"/>
             </a>
-            <a th:href="@{{context_path}/{locale}/admin/users-list(
-                locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},
-                context_path=${#httpServletRequest.getContextPath()})}"
+            <a th:href="@{/{locale}/admin/users-list(
+                locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()})}"
                class="w-1/3">
                 <button type="button" class="btn-primary min-w-fit w-full" th:text="#{user_list}"/>
             </a>
-            <a th:href="@{{context_path}/{locale}/admin/users-list-zepsute(
-                locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},
-                context_path=${#httpServletRequest.getContextPath()})}"
+            <a th:href="@{/{locale}/admin/users-list-zepsute(
+                locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()})}"
                class="w-1/3">
                 <button type="button" class="btn-primary min-w-fit w-full" th:text="zepsute"/>
             </a>
