--- a/src/main/resources/templates/fragments/common-welcome.html
+++ b/src/main/resources/templates/fragments/common-welcome.html
@@ -11,8 +11,8 @@
 <nav class="w-full bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900" th:fragment="header">
     <div class="w-full flex flex-wrap items-center justify-between">
         <a class="flex items-center" href="https://flowbite.com/">
-            <img alt="Flowbite Logo" class="h-6 mr-3 sm:h-9" src="https://flowbite.com/docs/images/logo.svg"/>
-            <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+            <img alt="BeeTwin Logo" class="h-6 mr-3 sm:h-9" src="https://flowbite.com/docs/images/logo.svg"/>
+            <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">BeeTwin</span>
         </a>
         <button aria-controls="navbar-default" aria-expanded="false"
                 class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
