--- a/src/main/resources/static/css/style.tailwind.css
+++ b/src/main/resources/static/css/style.tailwind.css
@@ -4,23 +4,23 @@
 
 @layer components {
     .btn-primary {
-        @apply whitespace-nowrap text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 my-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800;
+        @apply whitespace-nowrap text-default bg-accent hover:bg-accent focus:ring-4 focus:ring-accent font-medium rounded-lg text-sm px-5 py-2.5 my-2 dark:bg-accent dark:hover:bg-accent focus:outline-none dark:focus:ring-accent;
     }
 
     .header {
-        @apply text-3xl uppercase text-center w-full mt-5 mb-8 font-extrabold tracking-tight leading-none text-gray-900 dark:text-gray-200;
+        @apply text-3xl uppercase text-center w-full mt-5 mb-8 font-extrabold tracking-tight leading-none text-default dark:text-default-dark;
     }
 
     .background {
-        @apply min-h-screen w-full bg-gray-50 dark:bg-gray-800;
+        @apply min-h-screen w-full bg-default-dark dark:bg-default;
     }
 
     .input {
-        @apply appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white dark:bg-gray-300 dark:focus:bg-gray-200 focus:border-gray-500 disabled:opacity-60;
+        @apply block w-full p-2.5 border border-gray-300 text-sm rounded-lg bg-gray-50 dark:bg-default text-default dark:text-default-dark focus:border-accent dark:border-gray-700 dark:placeholder-gray-400 dark:focus:border-accent;
     }
 
     .inputLabel {
-        @apply block uppercase tracking-wide text-gray-700 dark:text-gray-200 text-xs font-bold mb-2;
+        @apply block uppercase tracking-wide text-default dark:text-default-dark text-xs font-bold mb-2;
     }
 
     body {
@@ -48,7 +48,7 @@
     }
 
     .error-message {
-        @apply mb-3 basis-full text-center text-gray-700 dark:text-gray-200 break-normal font-bold leading-none text-2xl;
+        @apply mb-3 basis-full text-center text-default dark:text-default-dark break-normal font-bold leading-none text-2xl;
     }
 
     .table-col {
@@ -60,15 +60,15 @@
     }
 
     .table-full {
-        @apply w-full text-sm text-left text-gray-500 dark:text-gray-400 min-w-[600px];
+        @apply w-full text-sm text-left text-default dark:text-default-dark min-w-[600px];
     }
 
     .table-head {
-        @apply text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
+        @apply text-xs dark:bg-gray-800 text-default bg-gray-300 uppercase dark:text-default-dark;
     }
 
     .table-row {
-        @apply bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600;
+        @apply bg-white border-b dark:bg-default dark:border-gray-200 hover:bg-default-dark dark:hover:bg-gray-600;
     }
 
 }
