--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -7,39 +7,45 @@
 </head>
 <body class="background">
 
-<div class="grid-center">
-    <div class="mb-5">
-        <h2 class="header" th:text="#{login}"/>
-        <form action="#" class="w-full max-w-sm"
-              method="post" th:action="@{/admin/login}"
+
+<div th:replace="fragments/common-welcome.html::header"></div>
+
+<div class="max-w-full place-items-center grid py-14 px-14 my-20">
+    <div class="min-w-full justify-self-stretch justify-items-stretch">
+        <h2 class="text-center text-4xl font-extrabold text-default-light dark:text-default-dark">
+            Login to your account
+        </h2>
+        <form action="#" class="mt-10 mb-4 space-y-5" method="post" th:action="@{/admin/login}"
               th:object="${DTO}">
-            <div class="div-with-two-columns">
-                <label class="inputLabel"
-                       for="form-email" th:text="#{email}"/>
-                <input class="input" id="form-email" th:field="*{email}" type="email"/>
-                <ul th:if="${#fields.hasErrors('email')}">
-                    <li class="form-error" th:each="err : ${#fields.errors('email')}" th:text="#{${err}}"/>
-                </ul>
-            </div>
-            <div class="div-with-two-columns">
-                <label class="inputLabel"
-                       for="form-password" th:text="#{password}"/>
-                <input class="input" id="form-password" th:field="*{password}" type="password"/>
-                <ul th:if="${#fields.hasErrors('password')}">
-                    <li class="form-error" th:each="err : ${#fields.errors('password')}" th:text="#{${err}}"/>
-                </ul>
-            </div>
-            <div class="w-full grid-center">
-                <input class="btn-primary w-64 w-full" id="submit-button" type="submit"/>
+            <div class="-space-y-px">
+                <div class="my-5">
+                    <label class="sr-only" for="form-email" th:text="#{email}"/>
+                    <input class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-purple-500 focus:border-purple-500 focus:z-10 sm:text-sm"
+                           id="form-email" th:field="*{email}"
+                           type="email"
+                    />
+                    <ul th:if="${#fields.hasErrors('email')}">
+                        <li class="form-error" th:each="err : ${#fields.errors('email')}" th:text="#{${err}}"/>
+                    </ul>
+                </div>
+                <div class="my-5">
+                    <label class="sr-only" for="form-password" th:text="#{password}"/>
+                    <input class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-purple-500 focus:border-purple-500 focus:z-10 sm:text-sm"
+                           id="form-password" th:field="*{password}"
+                           type="password"
+                    />
+                    <ul th:if="${#fields.hasErrors('password')}">
+                        <li class="form-error" th:each="err : ${#fields.errors('password')}" th:text="#{${err}}"/>
+                    </ul>
+                </div>
             </div>
         </form>
+        <input class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-accent focus:outline-none focus:ring-2 focus:ring-offset-2 mt-8"
+               id="submit-button" type="submit"/>
     </div>
 </div>
 
-<div th:replace="fragments/common.html::footer">
-
-</div>
-
+<div th:replace="fragments/common-welcome.html::footer"></div>
 
 </body>
 </html>
