--- a/src/main/resources/templates/fragments/common-welcome.html
+++ b/src/main/resources/templates/fragments/common-welcome.html
@@ -8,47 +8,55 @@
 <body>
 
 
-<nav class="w-full bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900" th:fragment="header">
-    <div class="w-full flex flex-wrap items-center justify-between">
-        <a class="flex items-center" href="https://flowbite.com/">
-            <img alt="BeeTwin Logo" class="h-6 mr-3 sm:h-9" src="https://flowbite.com/docs/images/logo.svg"/>
-            <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">BeeTwin</span>
-        </a>
-        <button aria-controls="navbar-default" aria-expanded="false"
-                class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-                data-collapse-toggle="navbar-default" type="button">
-            <span class="sr-only">Open main menu</span>
-            <svg aria-hidden="true" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
-                 xmlns="http://www.w3.org/2000/svg">
-                <path clip-rule="evenodd"
-                      d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-                      fill-rule="evenodd"></path>
-            </svg>
-        </button>
-        <div class="hidden md:block" id="navbar-default">
-            <ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-                <li>
-                    <a aria-current="page"
-                       class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white"
-                       href="#">Home</a>
-                </li>
-                <li>
-                    <a class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-                       href="#">About</a>
-                </li>
-                <li>
-                    <a class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-                       href="#">Services</a>
-                </li>
-                <li>
-                    <a class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-                       href="#">Pricing</a>
-                </li>
-                <li>
-                    <a class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-                       href="#">Contact</a>
-                </li>
-            </ul>
+<nav class="w-full border-gray-200 px-2 sm:px-4 py-2.5 rounded" th:fragment="header">
+    <div class="w-full">
+        <div class="w-full min-w-full">
+            <nav class="w-full mx-2 md:px-0 sm:px-4">
+                <div class="w-full flex flex-wrap items-center justify-between">
+                    <div class="inline-flex">
+                        <a class="flex items-center" href="https://flowbite.com/">
+                            <img th:src="@{/images/beeTwin.svg}" class="w-24 h-14 dark:hidden">
+                            <img th:src="@{/images/beeTwin_white.svg}" class="w-24 h-14 hidden dark:block">
+                        </a>
+                    </div>
+                    <button aria-controls="navbar-default" aria-expanded="false"
+                            class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                            data-collapse-toggle="navbar-default" type="button">
+                        <span class="sr-only">Open main menu</span>
+                        <svg aria-hidden="true" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path clip-rule="evenodd"
+                                  d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                                  fill-rule="evenodd"></path>
+                        </svg>
+                    </button>
+                    <div class="hidden md:block" id="navbar-default">
+                        <ul class="flex flex-col p-4 mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
+                            <li>
+                                <a aria-current="page"
+                                   class="block py-2 pl-3 pr-4 text-white md:text-yellow-500 md:p-0"
+                                   href="#">Home</a>
+                            </li>
+                            <li>
+                                <a class="block py-2 pl-3 pr-4 text-default dark:text-default-dark md:hover:text-yellow-500 md:p-0"
+                                   href="#">About</a>
+                            </li>
+                            <li>
+                                <a class="block py-2 pl-3 pr-4 text-default dark:text-default-dark md:hover:text-yellow-500 md:p-0"
+                                   href="#">Services</a>
+                            </li>
+                            <li>
+                                <a class="block py-2 pl-3 pr-4 text-default dark:text-default-dark md:hover:text-yellow-500 md:p-0"
+                                   href="#">Pricing</a>
+                            </li>
+                            <li>
+                                <a class="block py-2 pl-3 pr-4 text-default dark:text-default-dark md:hover:text-yellow-500 md:p-0"
+                                   href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
     </div>
 </nav>
