--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -8,31 +8,73 @@
 <body>
 
 <div class="flex flex-row" th:fragment="header">
-    <div class="w-full mt-4">
-        <nav aria-label="Breadcrumb" class="flex items-center">
-            <img th:src="@{/images/home.svg}" class="w-4 h-4 mx-2">
-            <ol class="breadcrumbs inline-flex items-center">
-                <li class="inline-flex items-center"
-                    th:each="breadcrumbs : ${@breadcrumbsHelper.getBreadcrumbs(#httpServletRequest, @localeContextHolderWrapper)}">
-                    <a class="text-sm font-medium text-gray-700 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"
-                       th:href="@{${breadcrumbs.getValue()}}" th:text="${breadcrumbs.getKey()}">
+    <div class="w-full">
+        <div class="w-full min-w-full">
+            <nav class="w-full mx-2 md:px-0 sm:px-4">
+                <div class="w-full flex flex-wrap items-center justify-between">
+                    <div class="inline-flex">
+                    <a class="flex items-center" href="https://flowbite.com/">
+                        <img th:src="@{/images/beeTwin.svg}" class="w-24 h-14 dark:hidden">
+                        <img th:src="@{/images/beeTwin_white.svg}" class="w-24 h-14 hidden dark:block">
                     </a>
-<!--                    <svg class="w-6 h-6 text-gray-400" fill="currentColor" viewBox="0 0 20 20"-->
-<!--                         xmlns="http://www.w3.org/2000/svg">-->
-<!--                        <path clip-rule="evenodd"-->
-<!--                              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"-->
-<!--                              fill-rule="evenodd"></path>-->
-<!--                    </svg>-->
-                    <img th:src="@{/images/arrow.svg}" class="w-5 h-5">
-                </li>
-            </ol>
-        </nav>
+                    <nav aria-label="Breadcrumb" class="flex items-center ml-3 hidden md:inline-flex">
+                        <img th:src="@{/images/home.svg}" class="w-4 h-4 mx-2">
+                        <ol class="breadcrumbs inline-flex items-center">
+                            <li class="inline-flex items-center"
+                                th:each="breadcrumbs : ${@breadcrumbsHelper.getBreadcrumbs(#httpServletRequest, @localeContextHolderWrapper)}">
+                                <a class="text-sm font-medium text-gray-700 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"
+                                   th:href="@{${breadcrumbs.getValue()}}" th:text="${breadcrumbs.getKey()}">
+                                </a>
+                                <img th:src="@{/images/arrow.svg}" class="w-5 h-5">
+                            </li>
+                        </ol>
+                    </nav>
+                    </div>
+                    <button aria-controls="navbar-default" aria-expanded="false"
+                            class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                            data-collapse-toggle="navbar-default" type="button">
+                        <span class="sr-only">Open main menu</span>
+                        <svg aria-hidden="true" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path clip-rule="evenodd"
+                                  d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                                  fill-rule="evenodd"></path>
+                        </svg>
+                    </button>
+                    <div class="hidden md:block" id="navbar-default">
+                        <ul class="flex flex-col p-4 mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
+                            <li>
+                                <a aria-current="page"
+                                   class="block py-2 pl-3 pr-4 text-white md:text-yellow-500 md:p-0"
+                                   href="#">Home</a>
+                            </li>
+                            <li>
+                                <a class="block py-2 pl-3 pr-4 text-default dark:text-default-dark md:hover:text-yellow-500 md:p-0"
+                                   href="#">About</a>
+                            </li>
+                            <li>
+                                <a class="block py-2 pl-3 pr-4 text-default dark:text-default-dark md:hover:text-yellow-500 md:p-0"
+                                   href="#">Services</a>
+                            </li>
+                            <li>
+                                <a class="block py-2 pl-3 pr-4 text-default dark:text-default-dark md:hover:text-yellow-500 md:p-0"
+                                   href="#">Pricing</a>
+                            </li>
+                            <li>
+                                <a class="block py-2 pl-3 pr-4 text-default dark:text-default-dark md:hover:text-yellow-500 md:p-0"
+                                   href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </div>
 </div>
 
 <div class="mt-auto w-full h-16 grid place-items-center" th:fragment="footer">
     <div class="w-11/12 border-t grid place-items-center">
-        <p class="inline-block dark:text-white mt-5 mb-5" th:text="#{copyright}"></p>
+        <p class="inline-block dark:text-default-dark text-default mt-5 mb-5" th:text="#{copyright}"></p>
     </div>
 </div>
 
