--- a/src/main/resources/static/css/style.tailwind.css
+++ b/src/main/resources/static/css/style.tailwind.css
@@ -4,11 +4,11 @@
 
 @layer components {
     .btn-primary {
-        @apply whitespace-nowrap text-default bg-accent hover:bg-accent focus:ring-4 focus:ring-accent font-medium rounded-lg text-sm px-5 py-2.5 my-2 dark:bg-accent dark:hover:bg-accent focus:outline-none dark:focus:ring-accent;
+        @apply relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-default bg-accent focus:outline-none focus:ring-2 focus:ring-offset-2 mt-8;
     }
 
     .header {
-        @apply text-3xl uppercase text-center w-full mt-5 mb-8 font-extrabold tracking-tight leading-none text-default dark:text-default-dark;
+        @apply text-center text-4xl font-extrabold text-default-light dark:text-default-dark;
     }
 
     .background {
@@ -16,7 +16,7 @@
     }
 
     .input {
-        @apply block w-full p-2.5 border border-gray-300 text-sm rounded-lg bg-gray-50 dark:bg-default text-default dark:text-default-dark focus:border-accent dark:border-gray-700 dark:placeholder-gray-400 dark:focus:border-accent;
+        @apply rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-default-light focus:outline-none focus:ring-yellow-500 focus:border-yellow-500 focus:z-10 sm:text-sm;
     }
 
     .inputLabel {
