--- a/src/main/resources/templates/admin/admin-panel.html
+++ b/src/main/resources/templates/admin/admin-panel.html
@@ -10,33 +10,35 @@
 <div th:replace="fragments/common.html::header"></div>
 
 <div class="grid-center">
-    <div class="max-w-sm">
-        <h2 class="header text-4xl" th:text="#{admin_panel}"/>
-        <div class="btn-group">
-            <a th:href="@{/{locale}/admin/create-account(
-        locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()})}"
-               class="w-1/3">
-                <button type="button" class="btn-primary min-w-fit w-full" th:text="#{create_user}"/>
-            </a>
-            <a th:href="@{/{locale}/admin/users-list(
-                locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()})}"
-               class="w-1/3">
-                <button type="button" class="btn-primary min-w-fit w-full" th:text="#{user_list}"/>
-            </a>
-            <a th:href="@{/{locale}/admin/users-list-zepsute(
-                locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()})}"
-               class="w-1/3">
-                <button type="button" class="btn-primary min-w-fit w-full" th:text="zepsute"/>
-            </a>
-            <a href="javascript: document.logoutForm.submit()"
-               class="w-1/3">
-                <button type="button" class="btn-primary min-w-fit w-full" th:text="#{logout}"/>
-            </a>
+    <div class="py-14 my-10">
+        <div class="min-w-full justify-self-stretch justify-items-stretch md:w-96 sm:60">
+            <h2 class="header text-4xl" th:text="#{admin_panel}"/>
+            <div class="btn-group">
+                <a class="w-1/3"
+                   th:href="@{/{locale}/admin/create-account(
+        locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()})}">
+                    <button class="btn-primary min-w-fit w-full" th:text="#{create_user}" type="button"/>
+                </a>
+                <a class="w-1/3"
+                   th:href="@{/{locale}/admin/users-list(
+                locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()})}">
+                    <button class="btn-primary min-w-fit w-full" th:text="#{user_list}" type="button"/>
+                </a>
+                <a class="w-1/3"
+                   th:href="@{/{locale}/admin/users-list-zepsute(
+                locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()})}">
+                    <button class="btn-primary min-w-fit w-full" th:text="zepsute" type="button"/>
+                </a>
+                <a class="w-1/3"
+                   href="javascript: document.logoutForm.submit()">
+                    <button class="btn-primary min-w-fit w-full" th:text="#{logout}" type="button"/>
+                </a>
+            </div>
         </div>
     </div>
 </div>
 
-<form name="logoutForm" th:action="@{/admin/logout}" method="post" th:hidden="true">
+<form method="post" name="logoutForm" th:action="@{/admin/logout}" th:hidden="true">
     <input th:hidden="true" type="submit">
 </form>
 
