--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -10,38 +10,36 @@
 
 <div th:replace="fragments/common-welcome.html::header"></div>
 
-<div class="max-w-full place-items-center grid py-14 px-14 my-20">
-    <div class="min-w-full justify-self-stretch justify-items-stretch">
-        <h2 class="text-center text-4xl font-extrabold text-default-light dark:text-default-dark">
-            Login to your account
-        </h2>
-        <form action="#" class="mt-10 mb-4 space-y-5" method="post" th:action="@{/admin/login}"
-              th:object="${DTO}">
-            <div class="-space-y-px">
-                <div class="my-5">
-                    <label class="sr-only" for="form-email" th:text="#{email}"/>
-                    <input class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-purple-500 focus:border-purple-500 focus:z-10 sm:text-sm"
-                           id="form-email" th:field="*{email}"
-                           type="email"
-                    />
-                    <ul th:if="${#fields.hasErrors('email')}">
-                        <li class="form-error" th:each="err : ${#fields.errors('email')}" th:text="#{${err}}"/>
-                    </ul>
+<div class="max-w-full grid-center">
+    <div class="py-14 px-14 my-20">
+        <div class="min-w-full justify-self-stretch justify-items-stretch md:w-96 sm:60">
+            <h2 class="header" th:text="#{login_to_your_account}"/>
+            <form action="#" class="mt-10 mb-4 space-y-5" method="post" th:action="@{/admin/login}"
+                  th:object="${DTO}">
+                <div class="-space-y-px">
+                    <div class="my-5">
+                        <label class="sr-only" for="form-email" th:text="#{email}"/>
+                        <input class="input" id="form-email" th:field="*{email}"
+                               type="email"
+                        />
+                        <ul th:if="${#fields.hasErrors('email')}">
+                            <li class="form-error" th:each="err : ${#fields.errors('email')}" th:text="#{${err}}"/>
+                        </ul>
+                    </div>
+                    <div class="my-5">
+                        <label class="sr-only" for="form-password" th:text="#{password}"/>
+                        <input class="input" id="form-password" th:field="*{password}"
+                               type="password"
+                        />
+                        <ul th:if="${#fields.hasErrors('password')}">
+                            <li class="form-error" th:each="err : ${#fields.errors('password')}" th:text="#{${err}}"/>
+                        </ul>
+                    </div>
                 </div>
-                <div class="my-5">
-                    <label class="sr-only" for="form-password" th:text="#{password}"/>
-                    <input class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-purple-500 focus:border-purple-500 focus:z-10 sm:text-sm"
-                           id="form-password" th:field="*{password}"
-                           type="password"
-                    />
-                    <ul th:if="${#fields.hasErrors('password')}">
-                        <li class="form-error" th:each="err : ${#fields.errors('password')}" th:text="#{${err}}"/>
-                    </ul>
-                </div>
-            </div>
-        </form>
-        <input class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-accent focus:outline-none focus:ring-2 focus:ring-offset-2 mt-8"
-               id="submit-button" type="submit"/>
+                <input class="btn-primary"
+                       id="submit-button" type="submit"/>
+            </form>
+        </div>
     </div>
 </div>
 
