--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -11,7 +11,7 @@
 <div th:replace="fragments/common-welcome.html::header"></div>
 
 <div class="max-w-full grid-center">
-    <div class="py-14 px-14 my-20">
+    <div class="px-14 my-10">
         <div class="min-w-full justify-self-stretch justify-items-stretch md:w-96 sm:60">
             <h2 class="header" th:text="#{login_to_your_account}"/>
             <form action="#" class="mt-10 mb-4 space-y-5" method="post" th:action="@{/admin/login}"
