--- a/src/main/resources/static/css/style.tailwind.css
+++ b/src/main/resources/static/css/style.tailwind.css
@@ -4,7 +4,7 @@
 
 @layer components {
     .btn-primary {
-        @apply relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-default bg-accent focus:outline-none focus:ring-2 focus:ring-offset-2 mt-8;
+        @apply relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-default bg-accent focus:outline-none focus:ring-2 focus:ring-offset-2 mt-5;
     }
 
     .header {
@@ -36,7 +36,7 @@
     }
 
     .one-column-of-two {
-        @apply w-full sm:w-1/2 px-3 mb-0;
+        @apply w-full sm:w-1/2 px-3;
     }
 
     .div-with-two-columns {
