--- a/src/main/resources/templates/admin/user-info.html
+++ b/src/main/resources/templates/admin/user-info.html
@@ -137,7 +137,7 @@
                 <div class="w-full grid-center">
                     <p class="form-success mb-5" th:if="${showSuccess != null}"
                        th:text="#{successfully_edited_user_info}"/>
-                    <input class="btn-primary px-10" hidden="hidden" id="submit-button" type="submit"/>
+                    <input class="hidden btn-primary px-10" id="submit-button" type="submit"/>
                     <button class="btn-primary px-10" id="edit-button" th:text="#{edit}" type="button"/>
                 </div>
             </form>
