--- a/src/main/resources/templates/admin/admin-panel.html
+++ b/src/main/resources/templates/admin/admin-panel.html
@@ -10,7 +10,7 @@
 <div th:replace="fragments/common.html::header"></div>
 
 <div class="grid-center">
-    <div class="py-14 my-5">
+    <div class="px-14 my-5">
         <div class="min-w-full justify-self-stretch justify-items-stretch md:w-96 sm:60">
             <h2 class="header text-4xl" th:text="#{admin_panel}"/>
             <div class="btn-group">
