Change admin/login and users-list

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -10,8 +10,19 @@
 
 <div th:replace="fragments/common-welcome.html::header"></div>
 
-<div class="grid-center">
-    <h2 class="header" th:text="#{welcome}"/>
+<div class="h-screen bg-fixed" style="background-image: url(https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE5cqGs?ver=4ba8)">
+    <div class="flex h-screen">
+        <div class="m-auto">
+            <h2 class="text-default-dark mb-48 mx-20 header text-6xl">Wypróbuj nasz super system do analizy filmów 3D już teraz!</h2>
+        </div>
+    </div>
+</div>
+<div class="h-screen">
+    <div class="flex h-screen">
+        <div class="m-auto">
+            <h2 class="mx-20 header text-6xl">Wypróbuj nasz super system do analizy filmów 3D już teraz!</h2>
+        </div>
+    </div>
 </div>
 
 <div th:replace="fragments/common-welcome.html::footer"></div>
