Set navbar buttons

--- a/src/main/resources/templates/admin/admin-panel.html
+++ b/src/main/resources/templates/admin/admin-panel.html
@@ -17,7 +17,7 @@
                 <a class="w-1/3"
                    th:href="@{/{locale}/admin/create-account(
         locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()})}">
-                    <button class="btn-primary min-w-fit w-full" th:text="#{create_user}" type="button"/>
+                    <button class="btn-primary min-w-fit w-full" th:text="#{create_new_user}" type="button"/>
                 </a>
                 <a class="w-1/3"
                    th:href="@{/{locale}/admin/users-list(
