--- a/src/main/resources/templates/admin/users-list.html
+++ b/src/main/resources/templates/admin/users-list.html
@@ -12,7 +12,7 @@
 
 <div class="max-w-full grid-center">
     <div class="px-14 my-5">
-        <div class="min-w-full justify-self-stretch justify-items-stretch md:w-148 sm:96">
+        <div class="min-w-full justify-self-stretch justify-items-stretch">
             <h2 class="header" th:text="#{user_list}"/>
             <div class="mt-5 mb-2 overflow-x-auto relative shadow-md sm:rounded-lg">
                 <table class="table-full"
