--- a/src/main/resources/templates/admin/create-account.html
+++ b/src/main/resources/templates/admin/create-account.html
@@ -12,7 +12,7 @@
 <div class="max-w-full grid-center">
     <div class="px-14 my-10">
         <div class="min-w-full justify-self-stretch justify-items-stretch md:w-96 sm:60">
-            <h2 class="header" th:text="#{create_user}"/>
+            <h2 class="header" th:text="#{create_new_user}"/>
             <form action="#" class="mt-10 mb-4 space-y-5"
                   method="post" th:action="@{/admin/create-account}"
                   th:object="${DTO}">
