--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -18,7 +18,7 @@
                         <img th:src="@{/images/beeTwin_white.svg}" class="w-24 h-14 hidden dark:block">
                     </a>
                     <nav aria-label="Breadcrumb" class="flex items-center ml-3 hidden md:inline-flex">
-                        <img th:src="@{/images/home.svg}" class="w-4 h-4 mx-2">
+                        <img th:src="@{/images/home.svg}" class="w-4 h-4 mx-4">
                         <ol class="breadcrumbs inline-flex items-center">
                             <li class="inline-flex items-center"
                                 th:each="breadcrumbs : ${@breadcrumbsHelper.getBreadcrumbs(#httpServletRequest, @localeContextHolderWrapper)}">
@@ -42,29 +42,28 @@
                         </svg>
                     </button>
                     <div class="hidden md:block" id="navbar-default">
-                        <ul class="flex flex-col p-4 mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
+                        <ul class="flex flex-col md:pr-10 p-4 mt-4 md:flex-row md:space-x-20 md:mt-0 md:text-sm md:font-medium">
                             <li>
-                                <a aria-current="page"
-                                   class="block py-2 pl-3 pr-4 text-white md:text-yellow-500 md:p-0"
-                                   href="#">Home</a>
+                                <a class="tracking-wide block py-2 p pr-4 text-base font-bold text-default dark:text-default-dark md:hover:text-yellow-500 md:p-0"
+                                   th:href="@{/{locale}/admin/user-info(
+                                            locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()})}"
+                                   th:text="#{list}"/>
                             </li>
                             <li>
-                                <a class="block py-2 pl-3 pr-4 text-default dark:text-default-dark md:hover:text-yellow-500 md:p-0"
-                                   href="#">About</a>
+                                <a class="tracking-wide block py-2 pl-3 text-base font-bold pr-4 text-default dark:text-default-dark md:hover:text-yellow-500 md:p-0"
+                                   th:href="@{/{locale}/admin/create-account(
+                                            locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()})}"
+                                   th:text="#{create}"/>
                             </li>
                             <li>
-                                <a class="block py-2 pl-3 pr-4 text-default dark:text-default-dark md:hover:text-yellow-500 md:p-0"
-                                   href="#">Services</a>
-                            </li>
-                            <li>
-                                <a class="block py-2 pl-3 pr-4 text-default dark:text-default-dark md:hover:text-yellow-500 md:p-0"
-                                   href="#">Pricing</a>
-                            </li>
-                            <li>
-                                <a class="block py-2 pl-3 pr-4 text-default dark:text-default-dark md:hover:text-yellow-500 md:p-0"
-                                   href="#">Contact</a>
+                                <a class="tracking-wide block py-2 pl-3 pr-4 text-base font-bold text-yellow-500 md:p-0"
+                                   href="javascript: document.logoutForm.submit()"
+                                   th:text="#{logout}"/>
                             </li>
                         </ul>
+                        <form method="post" name="logoutForm" th:action="@{/admin/logout}" th:hidden="true">
+                            <input th:hidden="true" type="submit">
+                        </form>
                     </div>
                 </div>
             </nav>
