--- a/src/main/resources/templates/fragments/common-welcome.html
+++ b/src/main/resources/templates/fragments/common-welcome.html
@@ -2,19 +2,19 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Welcome</title>
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
 </head>
 <body>
 
 
-<nav class="w-full border-gray-200 px-2 sm:px-4 py-2.5 rounded" th:fragment="header">
+<nav class="w-full border-gray-200 px-2 sm:px-4 py-1 rounded hover:bg-opacity-80 bg-opacity-50 bg-white" th:fragment="header">
     <div class="w-full">
         <div class="w-full min-w-full">
             <nav class="w-full mx-2 md:px-0 sm:px-4">
                 <div class="w-full flex flex-wrap items-center justify-between">
                     <div class="inline-flex">
-                        <a class="flex items-center" href="https://flowbite.com/">
+                        <a class="flex items-center" href="/">
                             <img th:src="@{/images/beeTwin.svg}" class="w-24 h-14 dark:hidden">
                             <img th:src="@{/images/beeTwin_white.svg}" class="w-24 h-14 hidden dark:block">
                         </a>
