--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -17,91 +17,53 @@
         </div>
     </div>
 </div>
-<div class="flex">
-    <div class="mx-20 my-auto w-full">
-        <div class="w-full my-10 md:justify-between">
-            <div class="flex flex-wrap">
-                <div class="space-y-8 md:space-y-0 md:justify-between md:flex md:items-center" role="status">
-                    <div class="w-3/6">
-                        <div class="mb-4"><p class="text-justify text-right" th:text="#{lorem_ipsum}"></p></div>
-                    </div>
-                    <div class="w-2/6 flex justify-center items-center bg-gray-300 rounded dark:bg-gray-700">
-                        <svg aria-hidden="true" class="text-gray-200" fill="currentColor"
-                             viewBox="0 0 640 512" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M480 80C480 35.82 515.8 0 560 0C604.2 0 640 35.82 640 80C640 124.2 604.2 160 560 160C515.8 160 480 124.2 480 80zM0 456.1C0 445.6 2.964 435.3 8.551 426.4L225.3 81.01C231.9 70.42 243.5 64 256 64C268.5 64 280.1 70.42 286.8 81.01L412.7 281.7L460.9 202.7C464.1 196.1 472.2 192 480 192C487.8 192 495 196.1 499.1 202.7L631.1 419.1C636.9 428.6 640 439.7 640 450.9C640 484.6 612.6 512 578.9 512H55.91C25.03 512 .0006 486.1 .0006 456.1L0 456.1z"/>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-            <div class="flex flex-wrap">
-                <div class="space-y-8 md:space-y-0 md:justify-between md:flex md:items-center" role="status">
-                    <div class="w-2/6 flex justify-center items-center bg-gray-300 rounded dark:bg-gray-700">
-                        <svg aria-hidden="true" class="text-gray-200" fill="currentColor"
-                             viewBox="0 0 640 512" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M480 80C480 35.82 515.8 0 560 0C604.2 0 640 35.82 640 80C640 124.2 604.2 160 560 160C515.8 160 480 124.2 480 80zM0 456.1C0 445.6 2.964 435.3 8.551 426.4L225.3 81.01C231.9 70.42 243.5 64 256 64C268.5 64 280.1 70.42 286.8 81.01L412.7 281.7L460.9 202.7C464.1 196.1 472.2 192 480 192C487.8 192 495 196.1 499.1 202.7L631.1 419.1C636.9 428.6 640 439.7 640 450.9C640 484.6 612.6 512 578.9 512H55.91C25.03 512 .0006 486.1 .0006 456.1L0 456.1z"/>
-                        </svg>
-                    </div>
-                    <div class="w-3/6">
-                        <div class="mb-4"><p class="text-justify" th:text="#{lorem_ipsum}"></p></div>
-                    </div>
-                </div>
-            </div>
+<div class="nazmiane my-24">
+    <div class="flex justify-around">
+        <div class="w-6/12 flex items-center first-in-order">
+            <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
         </div>
-        <div class="w-full my-10 md:justify-between">
-            <div class="flex flex-wrap">
-                <div class="space-y-8 md:space-y-0 md:justify-between md:flex md:items-center" role="status">
-                    <div class="w-3/6">
-                        <div class="mb-4"><p class="text-justify" th:text="#{lorem_ipsum}"></p></div>
-                    </div>
-                    <div class="w-2/6 flex justify-center items-center bg-gray-300 rounded dark:bg-gray-700">
-                        <svg aria-hidden="true" class="text-gray-200" fill="currentColor"
-                             viewBox="0 0 640 512" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M480 80C480 35.82 515.8 0 560 0C604.2 0 640 35.82 640 80C640 124.2 604.2 160 560 160C515.8 160 480 124.2 480 80zM0 456.1C0 445.6 2.964 435.3 8.551 426.4L225.3 81.01C231.9 70.42 243.5 64 256 64C268.5 64 280.1 70.42 286.8 81.01L412.7 281.7L460.9 202.7C464.1 196.1 472.2 192 480 192C487.8 192 495 196.1 499.1 202.7L631.1 419.1C636.9 428.6 640 439.7 640 450.9C640 484.6 612.6 512 578.9 512H55.91C25.03 512 .0006 486.1 .0006 456.1L0 456.1z"/>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-            <div class="flex flex-wrap">
-                <div class="space-y-8 md:space-y-0 md:justify-between md:flex md:items-center" role="status">
-                    <div class="w-2/6 flex justify-center items-center bg-gray-300 rounded dark:bg-gray-700">
-                        <svg aria-hidden="true" class="text-gray-200" fill="currentColor"
-                             viewBox="0 0 640 512" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M480 80C480 35.82 515.8 0 560 0C604.2 0 640 35.82 640 80C640 124.2 604.2 160 560 160C515.8 160 480 124.2 480 80zM0 456.1C0 445.6 2.964 435.3 8.551 426.4L225.3 81.01C231.9 70.42 243.5 64 256 64C268.5 64 280.1 70.42 286.8 81.01L412.7 281.7L460.9 202.7C464.1 196.1 472.2 192 480 192C487.8 192 495 196.1 499.1 202.7L631.1 419.1C636.9 428.6 640 439.7 640 450.9C640 484.6 612.6 512 578.9 512H55.91C25.03 512 .0006 486.1 .0006 456.1L0 456.1z"/>
-                        </svg>
-                    </div>
-                    <div class="w-3/6">
-                        <div class="mb-4"><p class="text-justify" th:text="#{lorem_ipsum}"></p></div>
-                    </div>
-                </div>
-            </div>
+        <div class="w-4/12 second-in-order">
+            <img th:src="@{/images/beeTwin.svg}"/>
         </div>
-        <div class="w-full my-10 md:justify-between">
-            <div class="flex flex-wrap">
-                <div class="space-y-8 md:space-y-0 md:justify-between md:flex md:items-center" role="status">
-                    <div class="w-3/6">
-                        <div class="mb-4"><p class="text-justify" th:text="#{lorem_ipsum}"></p></div>
-                    </div>
-                    <div class="w-2/6 flex justify-center items-center bg-gray-300 rounded dark:bg-gray-700">
-                        <svg aria-hidden="true" class="text-gray-200" fill="currentColor"
-                             viewBox="0 0 640 512" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M480 80C480 35.82 515.8 0 560 0C604.2 0 640 35.82 640 80C640 124.2 604.2 160 560 160C515.8 160 480 124.2 480 80zM0 456.1C0 445.6 2.964 435.3 8.551 426.4L225.3 81.01C231.9 70.42 243.5 64 256 64C268.5 64 280.1 70.42 286.8 81.01L412.7 281.7L460.9 202.7C464.1 196.1 472.2 192 480 192C487.8 192 495 196.1 499.1 202.7L631.1 419.1C636.9 428.6 640 439.7 640 450.9C640 484.6 612.6 512 578.9 512H55.91C25.03 512 .0006 486.1 .0006 456.1L0 456.1z"/>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-            <div class="flex flex-wrap">
-                <div class="space-y-8 md:space-y-0 md:justify-between md:flex md:items-center" role="status">
-                    <div class="w-2/6 flex justify-center items-center bg-gray-300 rounded dark:bg-gray-700">
-                        <svg aria-hidden="true" class="text-gray-200" fill="currentColor"
-                             viewBox="0 0 640 512" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M480 80C480 35.82 515.8 0 560 0C604.2 0 640 35.82 640 80C640 124.2 604.2 160 560 160C515.8 160 480 124.2 480 80zM0 456.1C0 445.6 2.964 435.3 8.551 426.4L225.3 81.01C231.9 70.42 243.5 64 256 64C268.5 64 280.1 70.42 286.8 81.01L412.7 281.7L460.9 202.7C464.1 196.1 472.2 192 480 192C487.8 192 495 196.1 499.1 202.7L631.1 419.1C636.9 428.6 640 439.7 640 450.9C640 484.6 612.6 512 578.9 512H55.91C25.03 512 .0006 486.1 .0006 456.1L0 456.1z"/>
-                        </svg>
-                    </div>
-                    <div class="w-3/6">
-                        <div class="mb-4"><p class="text-justify" th:text="#{lorem_ipsum}"></p></div>
-                    </div>
-                </div>
-            </div>
+    </div>
+    <div class="flex justify-around">
+        <div class="w-6/12 flex items-center first-in-order">
+            <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
+        </div>
+        <div class="w-4/12 second-in-order">
+            <img th:src="@{/images/beeTwin.svg}"/>
+        </div>
+    </div>
+    <div class="flex justify-around">
+        <div class="w-6/12 flex items-center first-in-order">
+            <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
+        </div>
+        <div class="w-4/12 second-in-order">
+            <img th:src="@{/images/beeTwin.svg}"/>
+        </div>
+    </div>
+    <div class="flex justify-around">
+        <div class="w-6/12 flex items-center first-in-order">
+            <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
+        </div>
+        <div class="w-4/12 second-in-order">
+            <img th:src="@{/images/beeTwin.svg}"/>
+        </div>
+    </div>
+    <div class="flex justify-around">
+        <div class="w-6/12 flex items-center first-in-order">
+            <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
+        </div>
+        <div class="w-4/12 second-in-order">
+            <img th:src="@{/images/beeTwin.svg}"/>
+        </div>
+    </div>
+    <div class="flex justify-around">
+        <div class="w-6/12 flex items-center first-in-order">
+            <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
+        </div>
+        <div class="w-4/12 second-in-order">
+            <img th:src="@{/images/beeTwin.svg}"/>
         </div>
     </div>
 </div>
