--- a/src/main/resources/templates/admin/user-info.html
+++ b/src/main/resources/templates/admin/user-info.html
@@ -60,7 +60,7 @@
                     <div class="one-column-of-two">
                         <label class="inputLabel" for="grid-enabled" th:text="#{enabled}"/>
                         <div class="relative">
-                            <select class="input editable-input"
+                            <select class="input dark:disabled:bg-white editable-input"
                                     disabled="disabled"
                                     id="grid-enabled"
                                     th:field="*{enabled}">
