--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -17,7 +17,7 @@
         </div>
     </div>
 </div>
-<div class="nazmiane my-24 mx-32">
+<div class="alternately my-24 mx-32">
     <div class="flex justify-around">
         <div class="w-5/12 flex items-center first-in-order">
             <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
