--- a/src/main/resources/templates/fragments/common-welcome.html
+++ b/src/main/resources/templates/fragments/common-welcome.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<nav class="w-full border-gray-200 px-2 sm:px-4 py-1 rounded hover:bg-opacity-80 bg-opacity-50 bg-white" th:fragment="header">
+<nav class="w-full border-gray-200 px-2 sm:px-4 py-1 hover:bg-opacity-80 bg-opacity-50 bg-white dark:bg-opacity-80 dark:hover:bg-opacity-90 dark:bg-default" th:fragment="header">
     <div class="w-full">
         <div class="w-full min-w-full">
             <nav class="w-full mx-2 md:px-0 sm:px-4">
