--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -23,7 +23,8 @@
             <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
         </div>
         <div class="w-3/12 second-in-order">
-            <img th:src="@{/images/beeTwin.svg}"/>
+            <img class="dark:hidden" th:src="@{/images/beeTwin.svg}">
+            <img class="hidden dark:block" th:src="@{/images/beeTwin_white.svg}">
         </div>
     </div>
     <div class="flex justify-around">
@@ -31,7 +32,8 @@
             <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
         </div>
         <div class="w-3/12 second-in-order">
-            <img th:src="@{/images/beeTwin.svg}"/>
+            <img class="dark:hidden" th:src="@{/images/beeTwin.svg}">
+            <img class="hidden dark:block" th:src="@{/images/beeTwin_white.svg}">
         </div>
     </div>
     <div class="flex justify-around">
@@ -39,7 +41,8 @@
             <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
         </div>
         <div class="w-3/12 second-in-order">
-            <img th:src="@{/images/beeTwin.svg}"/>
+            <img class="dark:hidden" th:src="@{/images/beeTwin.svg}">
+            <img class="hidden dark:block" th:src="@{/images/beeTwin_white.svg}">
         </div>
     </div>
     <div class="flex justify-around">
@@ -47,7 +50,8 @@
             <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
         </div>
         <div class="w-3/12 second-in-order">
-            <img th:src="@{/images/beeTwin.svg}"/>
+            <img class="dark:hidden" th:src="@{/images/beeTwin.svg}">
+            <img class="hidden dark:block" th:src="@{/images/beeTwin_white.svg}">
         </div>
     </div>
     <div class="flex justify-around">
@@ -55,7 +59,8 @@
             <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
         </div>
         <div class="w-3/12 second-in-order">
-            <img th:src="@{/images/beeTwin.svg}"/>
+            <img class="dark:hidden" th:src="@{/images/beeTwin.svg}">
+            <img class="hidden dark:block" th:src="@{/images/beeTwin_white.svg}">
         </div>
     </div>
     <div class="flex justify-around">
@@ -63,7 +68,8 @@
             <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
         </div>
         <div class="w-3/12 second-in-order">
-            <img th:src="@{/images/beeTwin.svg}"/>
+            <img class="dark:hidden" th:src="@{/images/beeTwin.svg}">
+            <img class="hidden dark:block" th:src="@{/images/beeTwin_white.svg}">
         </div>
     </div>
 </div>
