--- a/src/main/resources/static/css/style.tailwind.css
+++ b/src/main/resources/static/css/style.tailwind.css
@@ -71,6 +71,10 @@
         @apply bg-white border-b dark:bg-default dark:border-gray-600 hover:bg-default-dark dark:hover:bg-gray-600;
     }
 
+    .alternately {
+        @apply text-default dark:text-default-dark;
+    }
+
     .alternately > div:nth-child(even) > .first-in-order {
         @apply order-2;
     }
