--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <input class="btn-primary"
-                       id="submit-button" type="submit" th:text="#{login_button}"/>
+                       id="submit-button" type="submit" th:value="#{login_button}"/>
             </form>
         </div>
     </div>
