--- a/src/main/resources/templates/admin/user-info.html
+++ b/src/main/resources/templates/admin/user-info.html
@@ -137,6 +137,9 @@
                 <div class="w-full grid-center">
                     <p class="form-success mb-5" th:if="${showSuccess != null}"
                        th:text="#{successfully_edited_user_info}"/>
+                    <ul th:if="${#fields.hasErrors('versionToken')}">
+                        <li class="form-error" th:each="err : ${#fields.errors('versionToken')}" th:text="#{${err}}"/>
+                    </ul>
                     <input class="hidden btn-primary px-10" id="submit-button" type="submit"/>
                     <button class="btn-primary px-10" id="edit-button" th:text="#{edit}" type="button"/>
                 </div>
@@ -144,7 +147,7 @@
                         class="hidden"
                         id="version"
                         th:field="*{versionToken}"
-                       type="text">
+                       type="text"/>
             </form>
         </div>
     </div>
