--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -14,8 +14,8 @@
                 <div class="w-full flex flex-wrap items-center justify-between">
                     <div class="inline-flex">
                         <a class="flex items-center" href="/">
-                            <img class="dark:hidden" th:src="@{/images/beeTwin.svg}">
-                            <img class="hidden dark:block" th:src="@{/images/beeTwin_white.svg}">
+                            <img class="w-24 h-14 dark:hidden" th:src="@{/images/beeTwin.svg}">
+                            <img class="w-24 h-14 hidden dark:block" th:src="@{/images/beeTwin_white.svg}">
                         </a>
                         <nav aria-label="Breadcrumb" class="flex items-center ml-3 hidden md:inline-flex">
                             <img class="w-4 h-4 mx-4" th:src="@{/images/home.svg}">
