--- a/src/main/resources/templates/admin/user-info.html
+++ b/src/main/resources/templates/admin/user-info.html
@@ -135,11 +135,12 @@
                     </div>
                 </div>
                 <div class="w-full grid-center">
-                    <p class="form-success mb-5" th:if="${showSuccess != null}"
+                    <p class="form-success mb-5" th:if="${showSuccess}"
                        th:text="#{successfully_edited_user_info}"/>
                     <ul th:if="${#fields.hasErrors('versionToken')}">
                         <li class="form-error" th:each="err : ${#fields.errors('versionToken')}" th:text="#{${err}}"/>
                     </ul>
+                    <p class="form-error" th:if="${errorMessage}"  th:text="${errorMessage}"/>
                     <input class="hidden btn-primary px-10" id="submit-button" type="submit"/>
                     <button class="btn-primary px-10" id="edit-button" th:text="#{edit}" type="button"/>
                 </div>
